Wed Jan 16 22:38:48 UTC 2013  Adam Mitz  <mitza@ociweb.com>

        * README:

          Updated for upcoming release.

        * tests/DCPS/LargeSample/rtps.ini:

          Test RTPS transport unicast.

Wed Jan 16 15:06:25 UTC 2013  Adam Mitz  <mitza@ociweb.com>

        * tools/modeling/features/org.opendds.modeling.feature/feature.xml:
        * tools/modeling/features/org.opendds.modeling.site/site.xml:
        * tools/modeling/plugins/*/META-INF/MANIFEST.MF:
        * tools/modeling/plugins/org.opendds.modeling.common/about.properties:
        * tools/modeling/plugins/org.opendds.modeling.gmf/diagrams/*.gmfgen:

          Updated version numbers for the upcoming release.

Fri Jan 11 23:16:49 UTC 2013  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/transport/rtps_udp/RtpsUdpDataLink.cpp:
        * dds/DCPS/transport/rtps_udp/RtpsUdpReceiveStrategy.h:
        * dds/DCPS/transport/rtps_udp/RtpsUdpReceiveStrategy.cpp:

          For fragmented data, check to make sure the same sequence
          number is not effectively nack'd (due to the absence of the
          final flag) that's also taken care of by NackFrag.

Fri Jan 11 21:35:03 UTC 2013  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/transport/shmem/ShmemDataLink.cpp:
        * dds/DCPS/transport/shmem/ShmemReceiveStrategy.cpp:
        * dds/DCPS/transport/shmem/ShmemSendStrategy.cpp:

          Allow for reading a shared memory pool that has been grown
          by the other process.  Additional code is for Win32, POSIX
          seems to handle this already.

        * tests/DCPS/LargeSample/shmem.ini:

          Increase buffer size for OpenDDS transport headers.

Fri Jan 11 16:15:31 UTC 2013  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/transport/shmem/ShmemTransport.cpp:

          Need to explicitly request mapping at address 0 (use any address)
          on POSIX systems, or else ACE uses a hard-coded value that doesn't
          always work (if something else is mapped there).
