@@ -1,8 +1,8 @@
-This is OpenDDS version 3.3, released Fri Sep 28 18:40:22 UTC 2012.
+This is OpenDDS version 3.4, released Fri Jan 18 16:55:39 UTC 2013.
 
 8<----------8<----------8<----------8<----------8<----------8<----------8<----
 
-    OpenDDS VERSION: 3.3
+    OpenDDS VERSION: 3.4
     TAO VERSION:
 
     HOST MACHINE and OPERATING SYSTEM:
