@@ -1,4 +1,4 @@
-This is OpenDDS version 3.3, released Fri Sep 28 18:40:22 UTC 2012.
+This is OpenDDS version 3.4, released Fri Jan 18 16:55:39 UTC 2013.
 
 This software is open source and free of licensing fees.  See the
 LICENSE file (in this directory) for license details.
