@@ -7,6 +7,6 @@
  */
 
 #define DDS_MAJOR_VERSION 3
-#define DDS_MINOR_VERSION 3
+#define DDS_MINOR_VERSION 4
 #define DDS_MICRO_VERSION 0
-#define DDS_VERSION "3.3"
+#define DDS_VERSION "3.4"
