@@ -1,3 +1,7 @@
+Fri Jan 18 16:55:39 UTC 2013  Adam Mitz  <mitza@ociweb.com>
+
+        * OpenDDS version 3.4 released.
+
 Wed Jan 16 22:38:48 UTC 2013  Adam Mitz  <mitza@ociweb.com>
 
         * README:
